--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     width:"100%", height:"95%"};
   var parameters = {java_arguments:"-Xmx512m",
                     navigationPanel:"true",
-                    homeURL:"default.sh3d"};
+                    homeURL:"https://jelpus.github.io/3droom/test.sh3d"};
    
   deployJava.setInstallerType("kernel");
   deployJava.setAdditionalPackages("javax.swing,javax.imageio");
